frontend/test/should_pass/hom_015.grg
using deep_model_001;

rule r {
	x:A -e:Edge-> y:Ac;
	hom(x, y);
	negative{
		x <-- y;
		x --> z1:AB;
		y --> z2:AB;
		hom(x, z2);
	}

	replace {
		x <-:Edge- y;
	}
}

