frontend/test/should_fail/retype_018.grg
using attrib_model_001, enum_model_001;

rule r {
    -a:Edge->;
    replace {
        -:NINT<a>->;
    }
}
